--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,11 @@
 body{
-    height: 100%vh;
+    /* height: 100%vh; */
 }
 
 header{
-    display:flex;
-    justify-content: space-around;
+    text-align: center;
+    background-color: #a6ada5;
+    padding: 10px;
 }
 
 header li{
@@ -25,7 +26,6 @@ main{
 
 aside{
     flex: 1 1 0;
-    /* background-color: blueviolet; */
 }
 
 .about-me h2 {
@@ -47,7 +47,6 @@ aside .contact-me{
 
 section{
     flex: 2 1 0;
-    /* background-color: aqua; */
     display:grid;
     grid-gap: 10px;
     grid-template-columns: repeat(6, 1fr);
