--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,7 @@
 body{
-    /* height: 100%vh; */
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 header{
@@ -89,4 +91,6 @@ section{
 
 footer{
     text-align: center;
+    background-color: #a6ada5;
+    padding: 5px;
 }
