--- a/assets/style.css
+++ b/assets/style.css
@@ -106,8 +106,18 @@ section{
     grid-column-end:7;
 }
 
+.project-2 img, .project-3 img,
+.project-4 img, .project-5 img{
+    height: 200px;
+    width: 350px;
+}
+
 footer{
     text-align: center;
     background-color: #a6ada5;
     padding: 5px;
+}
+
+@media screen and (max-width:1024px){
+    
 }
