--- a/assets/style.css
+++ b/assets/style.css
@@ -10,12 +10,27 @@ header{
     padding: 10px;
 }
 
+header h1{
+    font-size: 6vw;
+    color: white;
+}
+
+h2{
+    font-size: 4vw;
+    color:#a6ada5;
+}
+
 header a{
     text-decoration: none;
 }
 
+a:visited { 
+    text-decoration: none; 
+    color: white; 
+   }
+
 header ul{
-    font-size: 20px;
+    font-size: 2vw;
 }
 
 header li{
@@ -54,8 +69,7 @@ aside{
 }
 
 .about-me img{
-    width: 300px; 
-    height: 200px;
+    width: 80%;
 }
 
 .benita_img{
@@ -89,8 +103,7 @@ section{
 }
 
 .project-1 img{
-    height: 300px;
-    width: 600px;
+    width: 80%;
     padding: 10px;
     margin: auto;
     display: block;
@@ -109,8 +122,7 @@ section{
 
 .project-2 img, .project-3 img,
 .project-4 img, .project-5 img{
-    height: 200px;
-    width: 350px;
+    width:90%;
 }
 
 footer{
@@ -119,14 +131,12 @@ footer{
     padding: 5px;
 }
 
-@media screen and (max-width:1090px){
-.project-2 img, .project-3 img,
-.project-4 img, .project-5 img{
-height: 150px;
-width: 250px;
-}
-}
+@media screen and (max-width:705px){
+    main{
+        display:block;
+    }
 
-@media screen and (max-width:480px){
-
+    h2{
+        font-size: 5vw;
+    }
 }
